--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                        <div class="col-lg-6 col-md-12">
                            <div class="school">
                                <div class="school-img">
-                                   <img src="/images/school-clg/school.jpg" alt="" class="img-fluid">
+                                   <img src="./images/school-clg/school.jpg" alt="" class="img-fluid">
                                </div>
                                <div class="school-name">
                                    <h3>S.K.P Hr Sec School, Kombai, Theni [DT]</h3>
@@ -158,7 +158,7 @@
                        <div class="col-lg-6 col-md-12">
                         <div class="clg">
                             <div class="clg-img">
-                                <img src="/images/school-clg/indra.jpg" alt="" class="img-fluid">
+                                <img src="./images/school-clg/indra.jpg" alt="" class="img-fluid">
                             </div>
                             <div class="clg-name">
                                 <h3>Indra Ganesan Collage of Engineering, Trichy</h3>
