--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="location">
                             <ul>
-                                <li>Current-location : Tirunelveli</li>
+                                <li>Current-location : Chennai</li>
                                 <li>Home-Town : Cumbum [Theni]</li>
                             </ul>
                         </div>
