--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
                                 </ul>
                             </div>
                        </div>
+                       <div class="col-lg-6 col-md-12">
+                        <div class="work-text">
+                            <h3>3D Visualizer</h3>
+                            <ul class="cook-text">
+                                <li>Working closely with architectural and design teams to plan and visualise interior projects.</li>
+                                <li>Create 3D interior visuals for internal design team.</li>
+                            </ul>
+                         </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 logo">
+                        <div class="company-text">
+                            <ul>
+                                <li class="company-name">Cookscape Interior</li>
+                                <li>Chennai</li>
+                                <div class="year-header"></div>
+                                <li>Feb-2021 to Present</li>
+                            </ul>
+                        </div>
+                   </div>
                    </div>
                </div>
            </div>
